# CineButler

./: .env.example  .gitignore  LICENSE  README.md  config.yaml.example  publish-to-github.sh  pyproject.toml
hooks/: 50-cinebutler.sh
src/cinebutler/: __init__.py  config.py  llm.py  main.py  models.py  prompts.py  workflow.py
src/cinebutler/nodes/: __init__.py  classify.py  identify.py  match.py  name.py  notify.py  parse.py  place.py  rename.py
src/cinebutler/tools/: __init__.py  filesystem.py  notifier.py  tmdb.py
tests/: test_workflow.py
